# neural-network-calibration

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: run_calibrate.py  run_eval.py  run_train.py
src/calrep/: __init__.py  calibrate.py  data.py  eval.py  metrics.py  models.py  plotting.py  train.py  utils.py
tests/: test_data.py  test_metrics.py
